# heichips-circt-lab

./: CMakeLists.txt  CombAddOptimize.cpp  README.md  justfile
example-add-gen/: add-simple.scala  uneven-addition.scala
include/: CMakeLists.txt
include/CombAddOptimize/: CMakeLists.txt  CombAddOptimize.h  CombAddOptimize.td
test/: basic.mlir
